--- a/composer.json
+++ b/composer.json
@@ -20,20 +20,33 @@
         "preferred-install": "dist"
     },
     "require": {
-        "php": ">=8.0"
+        "php": ">=8.0",
+        "ext-zip": "*",
+        "phpoffice/phpspreadsheet": "^4.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^12.0"
+        "phpunit/phpunit": "^12.0",
+        "bamarni/composer-bin-plugin": "^1.8"
     },
     "scripts": {
-        "post-install-cmd": [
-            "sh ./bin/package-update.sh"
-        ],
-        "post-update-cmd": [
-            "sh ./bin/package-update.sh"
-        ],
+        "pre-install-cmd": "@create-vendor-prefix-folder",
+        "pre-update-cmd": "@create-vendor-prefix-folder",
         "test": [
             "phpunit"
-        ]
+        ],
+        "prefix-dependencies": [
+            "vendor/bin/php-scoper add-prefix --output-dir=./vendor_prefixed --force",
+            "npm run gulp composer:delete_prefixed_vendor_libraries",
+            "npm run gulp composer:delete_unneeded_vendor_libraries",
+            "@composer dump-autoload -o -a"
+        ],
+        "clean-install": [
+            "composer update --root-reqs --no-dev --no-plugins -o -a"
+        ],
+        "build": [
+            "@clean-install",
+            "@prefix-dependencies"
+        ],
+        "create-vendor-prefix-folder": "npm run gulp composer:create_vendor_prefixed_folder"
     }
 }
