update mlp aktion

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "includes",
         "languages",
         "public",
-        "woocommerce",
+        "src",
+        "vendor",
         "index.php",
         "LICENSE.txt",
         "mlp-aktion.php",
