--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mlp-aktion",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "main": "build/index.js",
     "scripts": {
         "build": "wp-scripts build",
@@ -15,7 +15,6 @@
         "includes",
         "languages",
         "public",
-        "woocommerce",
         "index.php",
         "LICENSE.txt",
         "mlp-aktion.php",
@@ -40,7 +39,14 @@
         "@woocommerce/dependency-extraction-webpack-plugin": "^2.2.0",
         "@wordpress/env": "^10.20.0",
         "gulp": "^5.0.0",
+        "gulp-cached": "^1.1.1",
         "gulp-clean": "^0.4.0",
+        "gulp-debug": "^5.0.1",
+        "gulp-replace": "^1.1.4",
+        "gulp-sourcemaps": "^3.0.0",
+        "gulp-uglify": "^3.0.2",
+        "gulp-watch": "^5.0.1",
+        "gulp-zip": "^6.1.0",
         "merge-stream": "^2.0.0"
     }
 }
