--- a/package.json
+++ b/package.json
@@ -9,18 +9,6 @@
         "env": "wp-env",
         "gulp": "node ./node_modules/gulp/bin/gulp.js"
     },
-    "files": [
-        "admin",
-        "build",
-        "includes",
-        "languages",
-        "public",
-        "index.php",
-        "LICENSE.txt",
-        "mlp-aktion.php",
-        "README.txt",
-        "uninstall.php"
-    ],
     "keywords": [],
     "author": "",
     "license": "ISC",
@@ -42,6 +30,7 @@
         "gulp-cached": "^1.1.1",
         "gulp-clean": "^0.4.0",
         "gulp-debug": "^5.0.1",
+        "gulp-rename": "^2.0.0",
         "gulp-replace": "^1.1.4",
         "gulp-sourcemaps": "^3.0.0",
         "gulp-uglify": "^3.0.2",
